# gnx

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix  pyproject.toml
.cargo/: config.toml
configs/datasets/: cifar.toml  dino.toml  fashion_mnist.toml  mnist.toml  spiral.toml
configs/methods/: diffusion.toml  distilled_flow.toml  gan.toml  mean_flow.toml  sinkhorn_flow.toml
configs/models/: mlp_diffuser.toml  mlp_gan.toml  unet_flow.toml
configs/tuned/: diffusion_cifar_unet.toml  diffusion_fashion_mnist_unet.toml  diffusion_mlp_dino.toml  implicit_mean_flow_mlp_dino.toml  mean_flow_mlp_dino.toml
examples/: list_backends.py
gnx/: Cargo.toml
gnx-backend/: Cargo.toml
gnx-backend/src/: array.rs  backend.rs  device.rs  lib.rs
gnx-derive/: Cargo.toml
gnx-derive/src/: leaf.rs  lib.rs  lifetime_free.rs  paths.rs  transforms.rs
gnx-expr/: Cargo.toml
gnx-expr/src/: array.rs  attr.rs  builtins.rs  device.rs  lib.rs  value.rs
gnx-expr/src/expr/: attr.rs  builtins.rs  capture.rs  mod.rs  trace.rs  value.rs
gnx-expr/src/expr/trace/: capture.rs  cell.rs  context.rs  mod.rs
gnx-expr/src/trace/: capture.rs  cell.rs  mod.rs
gnx-expr/src/util/: dg_arc.rs
gnx-expr/tests/: capture.rs  downcast.rs
gnx-graph/: Cargo.toml
gnx-graph/src/: lib.rs
gnx-graph/src/builtins/: containers.rs  expr.rs  mod.rs  refs.rs
gnx-graph/src/core/: context.rs  filters.rs  mod.rs  path.rs  views.rs  visitors.rs
gnx-graph/src/des/: mod.rs
gnx-graph/src/ser/: mod.rs
gnx-graph/src/traits/: mod.rs
gnx-graph/src/util/: casting.rs  dag.rs  graph_ext.rs  mod.rs
gnx-graph/tests/: casting.rs  derive_macros.rs  expr_trace_filter.rs  graph_test.rs
gnx-io/: Cargo.toml
gnx-io/src/: lib.rs
gnx-io/src/json/: mod.rs  parser.rs  source.rs  value.rs  writer.rs
gnx-io/src/toml/: mod.rs  parser.rs  writer.rs
gnx-io/tests/: test_json.rs  test_toml.rs
gnx-jax/: Cargo.toml
gnx-jax/src/: lib.rs
gnx-transforms/: Cargo.toml
gnx-transforms/src/: callable.rs  jit.rs  lib.rs
gnx-ui/assets/: main.css
gnx-ui/src/components/: grid.rs
gnx/src/: lib.rs  transforms.rs
gnx/tests/: jit_test.rs
gnxlib/: Cargo.toml  pyproject.toml
gnxlib/src/: graph.rs  leaf.rs  lib.rs
notebooks/: conversion_check.ipynb
notebooks/.ipynb_checkpoints/: conversion_check-checkpoint.ipynb
python/: pyproject.toml
rust/: .gitignore  Cargo.toml
rust/gnx/: Cargo.toml
rust/gnx-derive/src/: lib.rs  transforms.rs
rust/gnx-expr/: Cargo.toml
rust/gnx-expr/src/: array.rs  backend.rs  builtins.rs  device.rs  error.rs  expr.rs  lib.rs  trace.rs  trace_value.rs  util.rs  value.rs
rust/gnx-expr/src/expr/: attr.rs  capture.rs  mod.rs  trace.rs  value.rs
rust/gnx-expr/src/util/: dg_arc.rs  mod.rs  vec.rs
rust/gnx-expr/tests/: capture.rs  tracer_stack.rs
rust/gnx-graph/: Cargo.toml
rust/gnx-graph/src/: context.rs  core.rs  filters.rs  lib.rs  source.rs
rust/gnx-graph/src/builtins/: refs.rs
rust/gnx-graph/src/core/: mod.rs
rust/gnx-graph/src/des/: builtins.rs  mod.rs
rust/gnx-graph/src/ser/: mod.rs
rust/gnx-graph/src/util/: callable.rs  dag.rs  mod.rs  traits.rs
rust/gnx-graph/tests/: callable_test.rs
rust/gnx-io/: Cargo.toml
rust/gnx-io/src/: deserialize.rs  lib.rs  serialize.rs  store.rs  visitor.rs
rust/gnx-io/src/des/: builtins.rs  mod.rs
rust/gnx-io/src/fs/: buffer.rs  local.rs  mod.rs  path.rs
rust/gnx-io/src/impls/: containers.rs  mod.rs
rust/gnx-io/src/json/: lexer.rs  mod.rs  parser.rs  source.rs  value.rs  writer.rs
rust/gnx-io/src/ser/: builtins.rs  mod.rs
rust/gnx-io/src/toml/: parser.rs  source.rs  value.rs
rust/gnx-io/src/util/: mod.rs  peek.rs  scratch.rs  text.rs
rust/gnx-io/tests/: test_json.rs  test_text.rs  test_toml.rs
rust/gnx-jax/: Cargo.toml
rust/gnx-jax/src/: lib.rs
rust/gnx-json/: Cargo.toml
rust/gnx-track/: Cargo.toml  Dioxus.toml
rust/gnx-track/src/: main.rs
rust/gnx-ui/: Cargo.toml  Dioxus.toml
rust/gnx-ui/assets/: main.css
rust/gnx-ui/src/: main.rs
rust/gnx-ui/src/components/: grid.rs  mod.rs
rust/gnx/src/: array.rs  backend.rs  callable.rs  fs.rs  lib.rs
rust/gnx/src/expr/: builtins.rs  mod.rs  trace.rs  util.rs
rust/gnx/src/filter/: mod.rs
rust/gnx/src/graph/: callable.rs  context.rs  exts.rs  filters.rs  impls.rs  mod.rs  path.rs  source.rs  traits.rs  view.rs  views.rs  visitors.rs
rust/gnx/src/graph/filter/: basic.rs  mod.rs
rust/gnx/src/graph/impls/: containers.rs  invalid.rs  mod.rs  rc.rs  refs.rs
rust/gnx/src/graph/util/: dag.rs  mod.rs  traits.rs
rust/gnx/src/transforms/: mod.rs
rust/gnx/src/util/: mod.rs
rust/gnx/tests/: callable_test.rs  graph_test.rs
rust/gnxlib/: Cargo.toml
rust/gnxlib/src/: bytes.rs  graph.rs  leaf.rs  lib.rs  string.rs
scripts/: clusterctl  compute_fid  convert_from_smalldiffusion  eval_checkpoint  generate_samples
src/gnx/core/: __init__.py  graph.py
src/gnx/datasets/: __init__.py  huggingface.py  image.py  toy.py
src/gnx/eval/: __init__.py  fid.py  ot.py
src/gnx/main/: __init__.py  common.py  diffusion.py  distilled_flow.py  gan.py  mean_flow.py  sinkhorn_flow.py  sinkhorn_map.py
src/gnx/methods/: __init__.py  diffusion.py  flow_map.py  gan.py  integrators.py  mean_flow.py  noise_schedule.py
src/gnx/methods/ot/: __init__.py  flow_map.py  generator.py  sinkhorn.py
src/gnx/models/: __init__.py
src/gnx/nn/: __init__.py  core.py  initializers.py  linear.py  norm.py  util.py
src/gnx/util/: distribution.py  fetch_util.py  fs.py  optimizers.py  pytorch_convert.py
sweeps/: fashion_mnist_mlp_methods.yml  mnist_mlp_methods.yml  toy_methods.yml
tests/: conftest.py  test_datasource.py  test_dist.py  test_graph.py  test_ideal_denoiser.py  test_inception.py  test_parquet.py  test_schedule.py  test_trainer.py
tests/compat/: test_pytorch.py  test_smalldiffusion.py
tests/integration/: diffusion_mlp_dino.toml  test_integration.py
(+31 files in other folders)
