[package]
name = "gnx-io"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
gnx-expr = { version = "0.1.0", path = "../gnx-expr" }
gnx-graph = { version = "0.1.0", path = "../gnx-graph" }
gnx-backend = { version = "0.1.0", path = "../gnx-backend" }
object_store = { version = "0.13.2", features = ["tokio"] }
ordered-float = "5.1.0"
paste = "1.0.15"
