[package]
name = "gnxlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gnxlib"
crate-type = ["cdylib"]

[dependencies]
gnx = { version = "0.1.0", path = "../gnx" }
pyo3 = { version = "0.28.3", features = ["abi3-py310", "num-bigint", "uuid"] }
num-bigint = "0.4.6"
gnx-jax = { version = "0.1.0", path = "../gnx-jax" }
uuid = "1.19.0"
